# HackRx-RAG

./: .dockerignore  .env.template  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker.sh
RAG/: Cargo.toml  README.md  test_api.sh
RAG/examples/: client.rs
RAG/src/: document_processor.rs  embedding_service.rs  gemini_service.rs  lib.rs  main.rs  models.rs  query_service.rs
api/: Cargo.toml
api/src/: auth.rs  hackrx_request.rs  hackrx_response.rs  main.rs  query_payload.rs  rag_response.rs  rag_utils.rs  utils.rs
