[workspace]
members = [
    "api",
    "RAG"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
pdf-extract = "0.7"
env_logger = "0.10"
dotenv = "0.15"
regex = "1.0"
log = "0.4"
