[package]
name = "rag_system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
pdf-extract = "0.7"
actix-web = "4.0"
actix-cors = "0.6"
env_logger = "0.10"
dotenv = "0.15"
regex = "1.0"
rayon = "1.7"
log = "0.4"
