[package]
name = "rag_system"
version = "0.1.0"
edition = "2021"

[lib]
name = "rag_system"
path = "src/lib.rs"

[[bin]]
name = "rag_system"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
anyhow = { workspace = true }
uuid = { workspace = true }
pdf-extract = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
regex = { workspace = true }
rayon = "1.7"
log = { workspace = true }
