[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
pdf-extract = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
unicode-segmentation = "1.10"
tempfile = "0.3.0"
tiktoken-rs = "0.5.0"
rag_system = { path = "../RAG" }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
